@@ -17,23 +17,34 @@
 package org.apache.solr.handler;
 
 import static org.apache.solr.common.params.CommonParams.NAME;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.CHECKSUM;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.COMPRESSION;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.CONF_FILE_SHORT;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.FILE;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.GENERATION;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.INTERVAL_ERR_MSG;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.INTERVAL_PATTERN;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.LEN;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.MAX_WRITE_PER_SECOND;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.OFFSET;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.STATUS;
+import static org.apache.solr.handler.admin.api.ReplicationAPIBase.TLOG_FILE;
 
+import io.opentelemetry.api.common.Attributes;
+import io.opentelemetry.api.metrics.BatchCallback;
+import io.opentelemetry.api.metrics.ObservableDoubleMeasurement;
+import io.opentelemetry.api.metrics.ObservableLongMeasurement;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.lang.invoke.MethodHandles;
 import java.net.URI;
-import java.nio.ByteBuffer;
-import java.nio.channels.SeekableByteChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
@@ -50,33 +61,28 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 import java.util.zip.Adler32;
 import java.util.zip.Checksum;
-import java.util.zip.DeflaterOutputStream;
-import org.apache.commons.io.output.CloseShieldOutputStream;
-import org.apache.lucene.codecs.CodecUtil;
 import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.IndexCommit;
 import org.apache.lucene.index.IndexDeletionPolicy;
 import org.apache.lucene.index.IndexWriter;
-import org.apache.lucene.index.SegmentCommitInfo;
-import org.apache.lucene.index.SegmentInfos;
-import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.store.IOContext;
 import org.apache.lucene.store.IndexInput;
-import org.apache.lucene.store.RateLimiter;
 import org.apache.solr.api.JerseyResource;
+import org.apache.solr.client.api.model.FileMetaData;
+import org.apache.solr.client.api.model.IndexVersionResponse;
+import org.apache.solr.client.api.model.SolrJerseyResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
-import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.CoreAdminParams;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ExecutorUtil;
-import org.apache.solr.common.util.FastOutputStream;
+import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
@@ -92,21 +98,24 @@ import org.apache.solr.core.SolrEventListener;
 import org.apache.solr.core.backup.repository.BackupRepository;
 import org.apache.solr.core.backup.repository.LocalFileSystemRepository;
 import org.apache.solr.handler.IndexFetcher.IndexFetchResult;
-import org.apache.solr.handler.admin.api.CoreReplicationAPI;
+import org.apache.solr.handler.ReplicationHandler.ReplicationHandlerConfig;
+import org.apache.solr.handler.admin.api.CoreReplication;
+import org.apache.solr.handler.admin.api.ReplicationAPIBase;
+import org.apache.solr.handler.admin.api.SnapshotBackupAPI;
 import org.apache.solr.handler.api.V2ApiUtils;
-import org.apache.solr.jersey.SolrJerseyResponse;
-import org.apache.solr.metrics.MetricsMap;
+import org.apache.solr.jersey.APIConfigProvider;
 import org.apache.solr.metrics.SolrMetricsContext;
+import org.apache.solr.metrics.otel.OtelUnit;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.search.SolrIndexSearcher;
 import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.update.SolrIndexWriter;
-import org.apache.solr.update.VersionInfo;
 import org.apache.solr.util.NumberUtils;
 import org.apache.solr.util.PropertiesInputStream;
 import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.plugin.SolrCoreAware;
+import org.apache.solr.util.stats.MetricUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.MDC;
@@ -140,14 +149,14 @@ import org.slf4j.MDC;
  *
  * @since solr 1.4
  */
-public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAware {
+public class ReplicationHandler extends RequestHandlerBase
+    implements SolrCoreAware, APIConfigProvider<ReplicationHandlerConfig> {
 
   public static final String PATH = "/replication";
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   SolrCore core;
-
-  private volatile boolean closed = false;
+  private BatchCallback metricsCallback;
 
   @Override
   public Name getPermissionName(AuthorizationContext request) {
@@ -162,6 +171,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
       generation = g;
       version = v;
     }
+
     /**
      * builds a CommitVersionInfo data for the specified IndexCommit. Will never be null, ut version
      * and generation may be zero if there are problems extracting them from the commit data
@@ -220,10 +230,6 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   private volatile long executorStartTime;
 
-  private int numberBackupsToKeep = 0; // zero: do not delete old backups
-
-  private int numTimesReplicated = 0;
-
   private final Map<String, FileInfo> confFileInfoCache = new HashMap<>();
 
   private Long reserveCommitDuration = readIntervalMs("00:00:10");
@@ -238,6 +244,8 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   private String pollIntervalStr;
 
   private PollListener pollListener;
+
+  private final ReplicationHandlerConfig replicationHandlerConfig = new ReplicationHandlerConfig();
 
   public interface PollListener {
     void onComplete(SolrCore solrCore, IndexFetchResult fetchResult) throws IOException;
@@ -270,9 +278,12 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
       final SolrJerseyResponse indexVersionResponse = getIndexVersionResponse();
       V2ApiUtils.squashIntoSolrResponseWithoutHeader(rsp, indexVersionResponse);
     } else if (command.equals(CMD_GET_FILE)) {
-      getFileStream(solrParams, rsp);
+      getFileStream(solrParams, rsp, req);
     } else if (command.equals(CMD_GET_FILE_LIST)) {
-      getFileList(solrParams, rsp);
+      final CoreReplication coreReplicationAPI = new CoreReplication(core, req, rsp);
+      V2ApiUtils.squashIntoSolrResponseWithoutHeader(
+          rsp,
+          coreReplicationAPI.fetchFileList(Long.parseLong(solrParams.required().get(GENERATION))));
     } else if (command.equalsIgnoreCase(CMD_BACKUP)) {
       doSnapShoot(new ModifiableSolrParams(solrParams), rsp, req);
     } else if (command.equalsIgnoreCase(CMD_RESTORE)) {
@@ -296,8 +307,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     } else if (command.equals(CMD_SHOW_COMMITS)) {
       populateCommitInfo(rsp);
     } else if (command.equals(CMD_DETAILS)) {
-      getReplicationDetails(
-          rsp, getBoolWithBackwardCompatibility(solrParams, "follower", "slave", true));
+      getReplicationDetails(rsp, solrParams.getBool("follower", true));
     } else if (CMD_ENABLE_REPL.equalsIgnoreCase(command)) {
       replicationEnabled.set(true);
       rsp.add(STATUS, OK_STATUS);
@@ -307,37 +317,44 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     }
   }
 
-  static boolean getBoolWithBackwardCompatibility(
-      SolrParams params, String preferredKey, String alternativeKey, boolean defaultValue) {
-    Boolean value = params.getBool(preferredKey);
-    if (value != null) {
-      return value;
-    }
-    return params.getBool(alternativeKey, defaultValue);
-  }
+  /**
+   * This method adds an Object of FileStream to the response . The FileStream implements a custom
+   * protocol which is understood by IndexFetcher.FileFetcher
+   *
+   * @see IndexFetcher.LocalFsFileFetcher
+   * @see IndexFetcher.DirectoryFileFetcher
+   */
+  private void getFileStream(SolrParams solrParams, SolrQueryResponse rsp, SolrQueryRequest req) {
+    final CoreReplication coreReplicationAPI = new CoreReplication(core, req, rsp);
+    String fileName;
+    String dirType;
 
-  @SuppressWarnings("unchecked")
-  static <T> T getObjectWithBackwardCompatibility(
-      SolrParams params, String preferredKey, String alternativeKey, T defaultValue) {
-    Object value = params.get(preferredKey);
-    if (value != null) {
-      return (T) value;
+    if (solrParams.get(CONF_FILE_SHORT) != null) {
+      fileName = solrParams.get(CONF_FILE_SHORT);
+      dirType = CONF_FILE_SHORT;
+    } else if (solrParams.get(TLOG_FILE) != null) {
+      fileName = solrParams.get(TLOG_FILE);
+      dirType = TLOG_FILE;
+    } else if (solrParams.get(FILE) != null) {
+      fileName = solrParams.get(FILE);
+      dirType = FILE;
+    } else {
+      reportErrorOnResponse(
+          rsp,
+          "Missing file parameter",
+          new SolrException(SolrException.ErrorCode.BAD_REQUEST, "File not specified in request"));
+      return;
     }
-    value = params.get(alternativeKey);
-    if (value != null) {
-      return (T) value;
-    }
-    return defaultValue;
-  }
 
-  @SuppressWarnings("unchecked")
-  public static <T> T getObjectWithBackwardCompatibility(
-      NamedList<?> params, String preferredKey, String alternativeKey) {
-    Object value = params.get(preferredKey);
-    if (value != null) {
-      return (T) value;
-    }
-    return (T) params.get(alternativeKey);
+    coreReplicationAPI.fetchFile(
+        fileName,
+        dirType,
+        solrParams.get(OFFSET),
+        solrParams.get(LEN),
+        Boolean.parseBoolean(solrParams.get(COMPRESSION)),
+        solrParams.getBool(CHECKSUM, false),
+        solrParams.getDouble(MAX_WRITE_PER_SECOND, Double.MAX_VALUE),
+        solrParams.getLong(GENERATION));
   }
 
   private void reportErrorOnResponse(SolrQueryResponse response, String message, Exception e) {
@@ -372,8 +389,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   private void fetchIndex(SolrParams solrParams, SolrQueryResponse rsp)
       throws InterruptedException {
-    String leaderUrl =
-        getObjectWithBackwardCompatibility(solrParams, LEADER_URL, LEGACY_LEADER_URL, null);
+    String leaderUrl = solrParams.get(LEADER_URL, null);
     if (!isFollower && leaderUrl == null) {
       reportErrorOnResponse(rsp, "No follower configured or no 'leaderUrl' specified", null);
       return;
@@ -440,11 +456,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   private volatile IndexFetcher currentIndexFetcher;
 
   public IndexFetchResult doFetch(SolrParams solrParams, boolean forceReplication) {
-    String leaderUrl =
-        solrParams == null
-            ? null
-            : ReplicationHandler.getObjectWithBackwardCompatibility(
-                solrParams, LEADER_URL, LEGACY_LEADER_URL, null);
+    String leaderUrl = solrParams.get(LEADER_URL, null);
     if (!indexFetchLock.tryLock()) return IndexFetchResult.LOCK_OBTAIN_FAILED;
     if (core.getCoreContainer().isShutDown()) {
       log.warn("I was asked to replicate but CoreContainer is shutting down");
@@ -455,7 +467,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
         if (currentIndexFetcher != null && currentIndexFetcher != pollingIndexFetcher) {
           currentIndexFetcher.destroy();
         }
-        currentIndexFetcher = new IndexFetcher(solrParams.toNamedList(), this, core);
+        currentIndexFetcher = new IndexFetcher(new SimpleOrderedMap<>(solrParams), this, core);
       } else {
         currentIndexFetcher = pollingIndexFetcher;
       }
@@ -508,7 +520,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
       }
     }
     if ("file".equals(repo.createURI("x").getScheme())) {
-      core.getCoreContainer().assertPathAllowed(Paths.get(location));
+      core.getCoreContainer().assertPathAllowed(Path.of(location));
     }
 
     URI locationUri = repo.createDirectoryURI(location);
@@ -593,50 +605,19 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   private void doSnapShoot(SolrParams params, SolrQueryResponse rsp, SolrQueryRequest req) {
     try {
       int numberToKeep = params.getInt(NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM, 0);
-      if (numberToKeep > 0 && numberBackupsToKeep > 0) {
-        throw new SolrException(
-            ErrorCode.BAD_REQUEST,
-            "Cannot use "
-                + NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
-                + " if "
-                + NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
-                + " was specified in the configuration.");
-      }
-      numberToKeep = Math.max(numberToKeep, numberBackupsToKeep);
-      if (numberToKeep < 1) {
-        numberToKeep = Integer.MAX_VALUE;
-      }
-
       String location = params.get(CoreAdminParams.BACKUP_LOCATION);
       String repoName = params.get(CoreAdminParams.BACKUP_REPOSITORY);
-      CoreContainer cc = core.getCoreContainer();
-      BackupRepository repo = null;
-      if (repoName != null) {
-        repo = cc.newBackupRepository(repoName);
-        location = repo.getBackupLocation(location);
-        if (location == null) {
-          throw new IllegalArgumentException("location is required");
-        }
-      } else {
-        repo = new LocalFileSystemRepository();
-        if (location == null) {
-          location = core.getDataDir();
-        } else {
-          location =
-              core.getCoreDescriptor().getInstanceDir().resolve(location).normalize().toString();
-        }
-      }
-      if ("file".equals(repo.createURI("x").getScheme())) {
-        core.getCoreContainer().assertPathAllowed(Paths.get(location));
-      }
-
-      // small race here before the commit point is saved
-      URI locationUri = repo.createDirectoryURI(location);
       String commitName = params.get(CoreAdminParams.COMMIT_NAME);
-      SnapShooter snapShooter =
-          new SnapShooter(repo, core, locationUri, params.get(NAME), commitName);
-      snapShooter.validateCreateSnapshot();
-      snapShooter.createSnapAsync(numberToKeep, (nl) -> snapShootDetails = nl);
+      String name = params.get(NAME);
+      doSnapShoot(
+          numberToKeep,
+          replicationHandlerConfig.numberBackupsToKeep,
+          location,
+          repoName,
+          commitName,
+          name,
+          core,
+          (nl) -> snapShootDetails = nl);
       rsp.add(STATUS, OK_STATUS);
     } catch (SolrException e) {
       throw e;
@@ -647,140 +628,62 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     }
   }
 
-  /**
-   * This method adds an Object of FileStream to the response . The FileStream implements a custom
-   * protocol which is understood by IndexFetcher.FileFetcher
-   *
-   * @see IndexFetcher.LocalFsFileFetcher
-   * @see IndexFetcher.DirectoryFileFetcher
-   */
-  private void getFileStream(SolrParams solrParams, SolrQueryResponse rsp) {
-    ModifiableSolrParams rawParams = new ModifiableSolrParams(solrParams);
-    rawParams.set(CommonParams.WT, FILE_STREAM);
+  public static void doSnapShoot(
+      int numberToKeep,
+      int numberBackupsToKeep,
+      String location,
+      String repoName,
+      String commitName,
+      String name,
+      SolrCore core,
+      Consumer<NamedList<?>> result)
+      throws IOException {
+    if (numberToKeep > 0 && numberBackupsToKeep > 0) {
+      throw new SolrException(
+          ErrorCode.BAD_REQUEST,
+          "Cannot use "
+              + NUMBER_BACKUPS_TO_KEEP_REQUEST_PARAM
+              + " if "
+              + NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
+              + " was specified in the configuration.");
+    }
+    numberToKeep = Math.max(numberToKeep, numberBackupsToKeep);
+    if (numberToKeep < 1) {
+      numberToKeep = Integer.MAX_VALUE;
+    }
 
-    String cfileName = solrParams.get(CONF_FILE_SHORT);
-    String tlogFileName = solrParams.get(TLOG_FILE);
-    if (cfileName != null) {
-      rsp.add(FILE_STREAM, new LocalFsConfFileStream(solrParams));
-    } else if (tlogFileName != null) {
-      rsp.add(FILE_STREAM, new LocalFsTlogFileStream(solrParams));
+    CoreContainer cc = core.getCoreContainer();
+    BackupRepository repo = null;
+    if (repoName != null) {
+      repo = cc.newBackupRepository(repoName);
+      location = repo.getBackupLocation(location);
+      if (location == null) {
+        throw new IllegalArgumentException("location is required");
+      }
     } else {
-      rsp.add(FILE_STREAM, new DirectoryFileStream(solrParams));
-    }
-    rsp.add(STATUS, OK_STATUS);
-  }
-
-  private void getFileList(SolrParams solrParams, SolrQueryResponse rsp) {
-    final IndexDeletionPolicyWrapper delPol = core.getDeletionPolicy();
-    final long gen = Long.parseLong(solrParams.required().get(GENERATION));
-
-    IndexCommit commit = null;
-    try {
-      if (gen == -1) {
-        commit = delPol.getAndSaveLatestCommit();
-        if (null == commit) {
-          rsp.add(CMD_GET_FILE_LIST, Collections.emptyList());
-          return;
-        }
+      repo = new LocalFileSystemRepository();
+      if (location == null) {
+        location = core.getDataDir();
       } else {
-        try {
-          commit = delPol.getAndSaveCommitPoint(gen);
-        } catch (IllegalStateException ignored) {
-          /* handle this below the same way we handle a return value of null... */
-        }
-        if (null == commit) {
-          // The gen they asked for either doesn't exist or has already been deleted
-          reportErrorOnResponse(rsp, "invalid index generation", null);
-          return;
-        }
-      }
-      assert null != commit;
-
-      List<Map<String, Object>> result = new ArrayList<>();
-      Directory dir = null;
-      try {
-        dir =
-            core.getDirectoryFactory()
-                .get(
-                    core.getNewIndexDir(),
-                    DirContext.DEFAULT,
-                    core.getSolrConfig().indexConfig.lockType);
-        SegmentInfos infos = SegmentInfos.readCommit(dir, commit.getSegmentsFileName());
-        for (SegmentCommitInfo commitInfo : infos) {
-          for (String file : commitInfo.files()) {
-            Map<String, Object> fileMeta = new HashMap<>();
-            fileMeta.put(NAME, file);
-            fileMeta.put(SIZE, dir.fileLength(file));
-
-            try (final IndexInput in = dir.openInput(file, IOContext.READONCE)) {
-              try {
-                long checksum = CodecUtil.retrieveChecksum(in);
-                fileMeta.put(CHECKSUM, checksum);
-              } catch (Exception e) {
-                // TODO Should this trigger a larger error?
-                log.warn("Could not read checksum from index file: {}", file, e);
-              }
-            }
-
-            result.add(fileMeta);
-          }
-        }
-
-        // add the segments_N file
-
-        Map<String, Object> fileMeta = new HashMap<>();
-        fileMeta.put(NAME, infos.getSegmentsFileName());
-        fileMeta.put(SIZE, dir.fileLength(infos.getSegmentsFileName()));
-        if (infos.getId() != null) {
-          try (final IndexInput in =
-              dir.openInput(infos.getSegmentsFileName(), IOContext.READONCE)) {
-            try {
-              fileMeta.put(CHECKSUM, CodecUtil.retrieveChecksum(in));
-            } catch (Exception e) {
-              // TODO Should this trigger a larger error?
-              log.warn(
-                  "Could not read checksum from index file: {}", infos.getSegmentsFileName(), e);
-            }
-          }
-        }
-        result.add(fileMeta);
-      } catch (IOException e) {
-        log.error(
-            "Unable to get file names for indexCommit generation: {}", commit.getGeneration(), e);
-        reportErrorOnResponse(rsp, "unable to get file names for given index generation", e);
-        return;
-      } finally {
-        if (dir != null) {
-          try {
-            core.getDirectoryFactory().release(dir);
-          } catch (IOException e) {
-            log.error("Could not release directory after fetching file list", e);
-          }
-        }
-      }
-      rsp.add(CMD_GET_FILE_LIST, result);
-
-      if (confFileNameAlias.size() < 1 || core.getCoreContainer().isZooKeeperAware()) return;
-      log.debug("Adding config files to list: {}", includeConfFiles);
-      // if configuration files need to be included get their details
-      rsp.add(CONF_FILES, getConfFileInfoFromCache(confFileNameAlias, confFileInfoCache));
-      rsp.add(STATUS, OK_STATUS);
-
-    } finally {
-      if (null != commit) {
-        // before releasing the save on our commit point, set a short reserve duration since
-        // the main reason remote nodes will ask for the file list is because they are preparing to
-        // replicate from us...
-        delPol.setReserveDuration(commit.getGeneration(), reserveCommitDuration);
-        delPol.releaseCommitPoint(commit);
+        location =
+            core.getCoreDescriptor().getInstanceDir().resolve(location).normalize().toString();
       }
     }
+    if ("file".equals(repo.createURI("x").getScheme())) {
+      core.getCoreContainer().assertPathAllowed(Path.of(location));
+    }
+
+    // small race here before the commit point is saved
+    URI locationUri = repo.createDirectoryURI(location);
+    SnapShooter snapShooter = new SnapShooter(repo, core, locationUri, name, commitName);
+    snapShooter.validateCreateSnapshot();
+    snapShooter.createSnapAsync(numberToKeep, result);
   }
 
-  public CoreReplicationAPI.IndexVersionResponse getIndexVersionResponse() throws IOException {
+  public IndexVersionResponse getIndexVersionResponse() throws IOException {
 
     IndexCommit commitPoint = indexCommitPoint; // make a copy so it won't change
-    CoreReplicationAPI.IndexVersionResponse rsp = new CoreReplicationAPI.IndexVersionResponse();
+    IndexVersionResponse rsp = new IndexVersionResponse();
     if (commitPoint == null) {
       // if this handler is 'lazy', we may not have tracked the last commit
       // because our commit listener is registered on inform
@@ -810,33 +713,25 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   }
 
   /**
-   * Retrieves the maximum version number from an index commit. NOTE: The commit <b>MUST</b> be
-   * reserved before calling this method
-   */
-  private long getMaxVersion(IndexCommit commit) throws IOException {
-    try (DirectoryReader reader = DirectoryReader.open(commit)) {
-      IndexSearcher searcher = new IndexSearcher(reader);
-      VersionInfo vinfo = core.getUpdateHandler().getUpdateLog().getVersionInfo();
-      return Math.abs(vinfo.getMaxVersionFromIndex(searcher));
-    }
-  }
-
-  /**
    * For configuration files, checksum of the file is included because, unlike index files, they may
    * have same content but different timestamps.
    *
    * <p>The local conf files information is cached so that everytime it does not have to compute the
    * checksum. The cache is refreshed only if the lastModified of the file changes
    */
-  List<Map<String, Object>> getConfFileInfoFromCache(
+  public List<FileMetaData> getConfFileInfoFromCache(
       NamedList<String> nameAndAlias, final Map<String, FileInfo> confFileInfoCache) {
-    List<Map<String, Object>> confFiles = new ArrayList<>();
+    List<FileMetaData> confFiles = new ArrayList<>();
     synchronized (confFileInfoCache) {
       Checksum checksum = null;
-      for (int i = 0; i < nameAndAlias.size(); i++) {
-        String cf = nameAndAlias.getName(i);
+
+      for (Map.Entry<String, String> aliasEntry : nameAndAlias) {
+        String cf = aliasEntry.getKey();
+        String aliasValue = aliasEntry.getValue();
+
         Path f = core.getResourceLoader().getConfigPath().resolve(cf);
         if (!Files.exists(f) || Files.isDirectory(f)) continue; // must not happen
+
         FileInfo info = confFileInfoCache.get(cf);
         long lastModified = 0;
         long size = 0;
@@ -846,13 +741,15 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
         } catch (IOException e) {
           // proceed with zeroes for now, will probably error on checksum anyway
         }
-        if (info == null || info.lastmodified != lastModified || info.size != size) {
+
+        if (info == null || info.lastmodified != lastModified || info.fileMetaData.size != size) {
           if (checksum == null) checksum = new Adler32();
           info = new FileInfo(lastModified, cf, size, getCheckSum(checksum, f));
           confFileInfoCache.put(cf, info);
         }
-        Map<String, Object> m = info.getAsMap();
-        if (nameAndAlias.getVal(i) != null) m.put(ALIAS, nameAndAlias.getVal(i));
+
+        FileMetaData m = info.fileMetaData;
+        if (aliasValue != null) m.alias = aliasValue;
         confFiles.add(m);
       }
     }
@@ -861,23 +758,11 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   static class FileInfo {
     long lastmodified;
-    String name;
-    long size;
-    long checksum;
+    FileMetaData fileMetaData;
 
     public FileInfo(long lasmodified, String name, long size, long checksum) {
       this.lastmodified = lasmodified;
-      this.name = name;
-      this.size = size;
-      this.checksum = checksum;
-    }
-
-    Map<String, Object> getAsMap() {
-      Map<String, Object> map = new HashMap<>();
-      map.put(NAME, name);
-      map.put(SIZE, size);
-      map.put(CHECKSUM, checksum);
-      return map;
+      this.fileMetaData = new FileMetaData(size, name, checksum);
     }
   }
 
@@ -921,14 +806,6 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     return nextTime;
   }
 
-  int getTimesReplicatedSinceStartup() {
-    return numTimesReplicated;
-  }
-
-  void setTimesReplicatedSinceStartup() {
-    numTimesReplicated++;
-  }
-
   @Override
   public Category getCategory() {
     return Category.REPLICATION;
@@ -937,6 +814,22 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   @Override
   public String getDescription() {
     return "ReplicationHandler provides replication of index and configuration files from Leader to Followers";
+  }
+
+  public NamedList<String> getConfFileNameAlias() {
+    return confFileNameAlias;
+  }
+
+  public Map<String, FileInfo> getConfFileInfoCache() {
+    return confFileInfoCache;
+  }
+
+  public String getIncludeConfFiles() {
+    return includeConfFiles;
+  }
+
+  public Long getReserveCommitDuration() {
+    return reserveCommitDuration;
   }
 
   /** returns the CommitVersionInfo for the current searcher, or null on error. */
@@ -950,86 +843,117 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     }
   }
 
-  // TODO: Handle compatibility in 8.x
   @Override
-  public void initializeMetrics(SolrMetricsContext parentContext, String scope) {
-    super.initializeMetrics(parentContext, scope);
-    solrMetricsContext.gauge(
-        () ->
-            (core != null && !core.isClosed()
-                ? NumberUtils.readableSize(core.getIndexSize())
-                : parentContext.nullString()),
-        true,
-        "indexSize",
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(
-        () ->
-            (core != null && !core.isClosed()
-                ? getIndexVersion().toString()
-                : parentContext.nullString()),
-        true,
-        "indexVersion",
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(
-        () ->
-            (core != null && !core.isClosed()
-                ? getIndexVersion().generation
-                : parentContext.nullNumber()),
-        true,
-        GENERATION,
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(
-        () -> (core != null && !core.isClosed() ? core.getIndexDir() : parentContext.nullString()),
-        true,
-        "indexPath",
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(() -> isLeader, true, "isLeader", getCategory().toString(), scope);
-    solrMetricsContext.gauge(() -> isFollower, true, "isFollower", getCategory().toString(), scope);
-    final MetricsMap fetcherMap =
-        new MetricsMap(
-            map -> {
+  public void initializeMetrics(SolrMetricsContext parentContext, Attributes attributes) {
+    Attributes replicationAttributes =
+        Attributes.builder()
+            .putAll(attributes)
+            .put(CATEGORY_ATTR, Category.REPLICATION.toString())
+            .build();
+    super.initializeMetrics(parentContext, replicationAttributes);
+
+    ObservableDoubleMeasurement indexSizeMetric =
+        solrMetricsContext.doubleGaugeMeasurement(
+            "solr_core_replication_index_size",
+            "Size of the index in megabytes",
+            OtelUnit.MEGABYTES);
+
+    ObservableLongMeasurement indexVersionMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_index_version", "Current index version");
+
+    ObservableLongMeasurement indexGenerationMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_index_generation", "Current index generation");
+
+    ObservableLongMeasurement isLeaderMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_is_leader", "Whether this node is a leader (1) or not (0)");
+
+    ObservableLongMeasurement isFollowerMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_is_follower", "Whether this node is a follower (1) or not (0)");
+
+    ObservableLongMeasurement replicationEnabledMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_is_enabled", "Whether replication is enabled (1) or not (0)");
+
+    ObservableLongMeasurement isPollingDisabledMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_is_polling_disabled",
+            "Whether polling is disabled (1) or not (0)");
+
+    ObservableLongMeasurement isReplicatingMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_is_replicating",
+            "Whether replication is in progress (1) or not (0)");
+
+    ObservableLongMeasurement timeElapsedMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_time_elapsed",
+            "Time elapsed during replication in seconds",
+            OtelUnit.SECONDS);
+
+    ObservableLongMeasurement bytesDownloadedMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_downloaded_size",
+            "Total bytes downloaded during replication",
+            OtelUnit.BYTES);
+
+    ObservableLongMeasurement downloadSpeedMetric =
+        solrMetricsContext.longGaugeMeasurement(
+            "solr_core_replication_download_speed", "Download speed in bytes per second");
+
+    metricsCallback =
+        solrMetricsContext.batchCallback(
+            () -> {
+              if (core != null && !core.isClosed()) {
+                indexSizeMetric.record(
+                    MetricUtils.bytesToMegabytes(core.getIndexSize()), replicationAttributes);
+
+                CommitVersionInfo vInfo = getIndexVersion();
+                if (vInfo != null) {
+                  indexVersionMetric.record(vInfo.version, replicationAttributes);
+                  indexGenerationMetric.record(vInfo.generation, replicationAttributes);
+                }
+              }
+
+              isLeaderMetric.record(isLeader ? 1 : 0, replicationAttributes);
+              isFollowerMetric.record(isFollower ? 1 : 0, replicationAttributes);
+              replicationEnabledMetric.record(
+                  (isLeader && replicationEnabled.get()) ? 1 : 0, replicationAttributes);
+
               IndexFetcher fetcher = currentIndexFetcher;
               if (fetcher != null) {
-                map.put(LEADER_URL, fetcher.getLeaderUrl());
-                if (getPollInterval() != null) {
-                  map.put(POLL_INTERVAL, getPollInterval());
-                }
-                map.put("isPollingDisabled", isPollingDisabled());
-                map.put("isReplicating", isReplicating());
+                isPollingDisabledMetric.record(isPollingDisabled() ? 1 : 0, replicationAttributes);
+                isReplicatingMetric.record(isReplicating() ? 1 : 0, replicationAttributes);
+
                 long elapsed = fetcher.getReplicationTimeElapsed();
                 long val = fetcher.getTotalBytesDownloaded();
                 if (elapsed > 0) {
-                  map.put("timeElapsed", elapsed);
-                  map.put("bytesDownloaded", val);
-                  map.put("downloadSpeed", val / elapsed);
+                  timeElapsedMetric.record(elapsed, replicationAttributes);
+                  bytesDownloadedMetric.record(val, replicationAttributes);
+                  downloadSpeedMetric.record(val / elapsed, replicationAttributes);
                 }
-                Properties props = loadReplicationProperties();
-                addReplicationProperties(map::putNoEx, props);
               }
-            });
-    solrMetricsContext.gauge(fetcherMap, true, "fetcher", getCategory().toString(), scope);
-    solrMetricsContext.gauge(
-        () -> isLeader && includeConfFiles != null ? includeConfFiles : "",
-        true,
-        "confFilesToReplicate",
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(
-        () -> isLeader ? getReplicateAfterStrings() : Collections.<String>emptyList(),
-        true,
-        REPLICATE_AFTER,
-        getCategory().toString(),
-        scope);
-    solrMetricsContext.gauge(
-        () -> isLeader && replicationEnabled.get(),
-        true,
-        "replicationEnabled",
-        getCategory().toString(),
-        scope);
+            },
+            indexSizeMetric,
+            indexVersionMetric,
+            indexGenerationMetric,
+            isLeaderMetric,
+            isFollowerMetric,
+            replicationEnabledMetric,
+            isPollingDisabledMetric,
+            isReplicatingMetric,
+            timeElapsedMetric,
+            bytesDownloadedMetric,
+            downloadSpeedMetric);
+  }
+
+  @Override
+  public void close() throws IOException {
+    IOUtils.closeQuietly(metricsCallback);
+    super.close();
   }
 
   // TODO Should a failure retrieving any piece of info mark the overall request as a failure?  Is
@@ -1076,9 +1000,9 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
           follower.add(ERR_STATUS, "invalid_leader");
         }
       }
-      follower.add(LEADER_URL, fetcher.getLeaderUrl());
+      follower.add(LEADER_URL, fetcher.getLeaderCoreUrl());
       if (getPollInterval() != null) {
-        follower.add(POLL_INTERVAL, getPollInterval());
+        follower.add(ReplicationAPIBase.POLL_INTERVAL, getPollInterval());
       }
       Date nextScheduled = getNextScheduledExecTime();
       if (nextScheduled != null && !isPollingDisabled()) {
@@ -1148,7 +1072,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
             follower.add("replicationStartTime", replicationStartTimeStamp.toString());
           }
           long elapsed = fetcher.getReplicationTimeElapsed();
-          follower.add("timeElapsed", String.valueOf(elapsed) + "s");
+          follower.add("timeElapsed", elapsed + "s");
 
           if (bytesDownloaded > 0)
             estimatedTimeRemaining =
@@ -1213,13 +1137,13 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     if (s == null || s.trim().length() == 0) return null;
     if (clzz == Date.class) {
       try {
-        Long l = Long.parseLong(s);
+        long l = Long.parseLong(s);
         return new Date(l).toString();
       } catch (NumberFormatException e) {
         return null;
       }
     } else if (clzz == List.class) {
-      String ss[] = s.split(",");
+      String[] ss = s.split(",");
       List<String> l = new ArrayList<>();
       for (String s1 : ss) {
         l.add(new Date(Long.parseLong(s1)).toString());
@@ -1303,9 +1227,10 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
       log.info(" No value set for 'pollInterval'. Timer Task not started.");
       return;
     }
-
+    final Map<String, String> context = MDC.getCopyOfContextMap();
     Runnable task =
         () -> {
+          MDC.setContextMap(context);
           if (pollDisabled.get()) {
             log.info("Poll disabled");
             return;
@@ -1314,7 +1239,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
           try {
             log.debug("Polling for index modifications");
             markScheduledExecutionStart();
-            IndexFetchResult fetchResult = doFetch(null, false);
+            IndexFetchResult fetchResult = doFetch(SolrParams.of(), false);
             if (pollListener != null) pollListener.onComplete(core, fetchResult);
           } catch (Exception e) {
             log.error("Exception in fetching index", e);
@@ -1342,18 +1267,18 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     registerCloseHook();
     Object nbtk = initArgs.get(NUMBER_BACKUPS_TO_KEEP_INIT_PARAM);
     if (nbtk != null) {
-      numberBackupsToKeep = Integer.parseInt(nbtk.toString());
+      replicationHandlerConfig.numberBackupsToKeep = Integer.parseInt(nbtk.toString());
     } else {
-      numberBackupsToKeep = 0;
+      replicationHandlerConfig.numberBackupsToKeep = 0;
     }
-    NamedList<?> follower = getObjectWithBackwardCompatibility(initArgs, "follower", "slave");
+    NamedList<?> follower = (NamedList<?>) initArgs.get("follower");
     boolean enableFollower = isEnabled(follower);
     if (enableFollower) {
       currentIndexFetcher = pollingIndexFetcher = new IndexFetcher(follower, this, core);
-      setupPolling((String) follower.get(POLL_INTERVAL));
+      setupPolling((String) follower.get(ReplicationAPIBase.POLL_INTERVAL));
       isFollower = true;
     }
-    NamedList<?> leader = getObjectWithBackwardCompatibility(initArgs, "leader", "master");
+    NamedList<?> leader = (NamedList<?>) initArgs.get("leader");
     boolean enableLeader = isEnabled(leader);
 
     if (enableLeader || (enableFollower && !currentIndexFetcher.fetchFromLeader)) {
@@ -1376,11 +1301,11 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     if (enableLeader) {
       includeConfFiles = (String) leader.get(CONF_FILES);
       if (includeConfFiles != null && includeConfFiles.trim().length() > 0) {
-        List<String> files = Arrays.asList(includeConfFiles.split(","));
+        String[] files = includeConfFiles.split(",");
         for (String file : files) {
           if (file.trim().length() == 0) continue;
           String[] strs = file.trim().split(":");
-          // if there is an alias add it or it is null
+          // if there is an alias add it, or it is null
           confFileNameAlias.add(strs[0], strs.length > 1 ? strs[1] : null);
         }
         log.info("Replication enabled for following config files: {}", includeConfFiles);
@@ -1401,8 +1326,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
       if (replicateOnOptimize) {
         IndexDeletionPolicyWrapper wrapper = core.getDeletionPolicy();
         IndexDeletionPolicy policy = wrapper == null ? null : wrapper.getWrappedDeletionPolicy();
-        if (policy instanceof SolrDeletionPolicy) {
-          SolrDeletionPolicy solrPolicy = (SolrDeletionPolicy) policy;
+        if (policy instanceof SolrDeletionPolicy solrPolicy) {
           if (solrPolicy.getMaxOptimizedCommitsToKeep() < 1) {
             solrPolicy.setMaxOptimizedCommitsToKeep(1);
           }
@@ -1452,7 +1376,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
             }
           }
 
-          // ensure the writer is init'd so that we have a list of commit points
+          // ensure the writer is initialized so that we have a list of commit points
           RefCounted<IndexWriter> iw =
               core.getUpdateHandler().getSolrCoreState().getIndexWriter(core);
           iw.decref();
@@ -1477,7 +1401,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   @Override
   public Collection<Class<? extends JerseyResource>> getJerseyResources() {
-    return List.of(CoreReplicationAPI.class);
+    return List.of(CoreReplication.class, SnapshotBackupAPI.class);
   }
 
   @Override
@@ -1577,7 +1501,7 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
         }
         if (snapshoot) {
           try {
-            int numberToKeep = numberBackupsToKeep;
+            int numberToKeep = replicationHandlerConfig.numberBackupsToKeep;
             if (numberToKeep < 1) {
               numberToKeep = Integer.MAX_VALUE;
             }
@@ -1600,257 +1524,11 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
     };
   }
 
-  /** This class is used to read and send files in the lucene index */
-  private class DirectoryFileStream implements SolrCore.RawWriter {
-    protected SolrParams params;
-
-    protected FastOutputStream fos;
-
-    protected Long indexGen;
-    protected IndexDeletionPolicyWrapper delPolicy;
-
-    protected String fileName;
-    protected String cfileName;
-    protected String tlogFileName;
-    protected String sOffset;
-    protected String sLen;
-    protected final boolean compress;
-    protected boolean useChecksum;
-
-    protected long offset = -1;
-    protected int len = -1;
-
-    protected Checksum checksum;
-
-    private RateLimiter rateLimiter;
-
-    byte[] buf;
-
-    public DirectoryFileStream(SolrParams solrParams) {
-      params = solrParams;
-      delPolicy = core.getDeletionPolicy();
-
-      fileName = validateFilenameOrError(params.get(FILE));
-      cfileName = validateFilenameOrError(params.get(CONF_FILE_SHORT));
-      tlogFileName = validateFilenameOrError(params.get(TLOG_FILE));
-
-      sOffset = params.get(OFFSET);
-      sLen = params.get(LEN);
-      compress = Boolean.parseBoolean(params.get(COMPRESSION));
-      useChecksum = params.getBool(CHECKSUM, false);
-      indexGen = params.getLong(GENERATION);
-      if (useChecksum) {
-        checksum = new Adler32();
-      }
-      // No throttle if MAX_WRITE_PER_SECOND is not specified
-      double maxWriteMBPerSec = params.getDouble(MAX_WRITE_PER_SECOND, Double.MAX_VALUE);
-      rateLimiter = new RateLimiter.SimpleRateLimiter(maxWriteMBPerSec);
-    }
-
-    // Throw exception on directory traversal attempts
-    protected String validateFilenameOrError(String fileName) {
-      if (fileName != null) {
-        Path filePath = Paths.get(fileName);
-        filePath.forEach(
-            subpath -> {
-              if ("..".equals(subpath.toString())) {
-                throw new SolrException(ErrorCode.FORBIDDEN, "File name cannot contain ..");
-              }
-            });
-        if (filePath.isAbsolute()) {
-          throw new SolrException(ErrorCode.FORBIDDEN, "File name must be relative");
-        }
-        return fileName;
-      } else return null;
-    }
-
-    protected void initWrite() throws IOException {
-      if (sOffset != null) offset = Long.parseLong(sOffset);
-      if (sLen != null) len = Integer.parseInt(sLen);
-      if (fileName == null && cfileName == null && tlogFileName == null) {
-        // no filename do nothing
-        writeNothingAndFlush();
-      }
-      buf = new byte[(len == -1 || len > PACKET_SZ) ? PACKET_SZ : len];
-
-      // reserve commit point till write is complete
-      if (indexGen != null) {
-        delPolicy.saveCommitPoint(indexGen);
-      }
-    }
-
-    protected void createOutputStream(OutputStream out) {
-      // DeflaterOutputStream requires a close call, but don't close the request outputstream
-      out = new CloseShieldOutputStream(out);
-      if (compress) {
-        fos = new FastOutputStream(new DeflaterOutputStream(out));
-      } else {
-        fos = new FastOutputStream(out);
-      }
-    }
-
-    protected void extendReserveAndReleaseCommitPoint() {
-      if (indexGen != null) {
-        // Reserve the commit point for another 10s for the next file to be to fetched.
-        // We need to keep extending the commit reservation between requests so that the replica can
-        // fetch all the files correctly.
-        delPolicy.setReserveDuration(indexGen, reserveCommitDuration);
-
-        // release the commit point as the write is complete
-        delPolicy.releaseCommitPoint(indexGen);
-      }
-    }
-
-    @Override
-    public void write(OutputStream out) throws IOException {
-      createOutputStream(out);
-
-      IndexInput in = null;
-      try {
-        initWrite();
-
-        Directory dir = core.withSearcher(searcher -> searcher.getIndexReader().directory());
-        in = dir.openInput(fileName, IOContext.READONCE);
-        // if offset is mentioned move the pointer to that point
-        if (offset != -1) in.seek(offset);
-
-        long filelen = dir.fileLength(fileName);
-        long maxBytesBeforePause = 0;
-
-        while (true) {
-          offset = offset == -1 ? 0 : offset;
-          int read = (int) Math.min(buf.length, filelen - offset);
-          in.readBytes(buf, 0, read);
-
-          fos.writeInt(read);
-          if (useChecksum) {
-            checksum.reset();
-            checksum.update(buf, 0, read);
-            fos.writeLong(checksum.getValue());
-          }
-          fos.write(buf, 0, read);
-          fos.flush();
-          log.debug("Wrote {} bytes for file {}", offset + read, fileName); // nowarn
-
-          // Pause if necessary
-          maxBytesBeforePause += read;
-          if (maxBytesBeforePause >= rateLimiter.getMinPauseCheckBytes()) {
-            rateLimiter.pause(maxBytesBeforePause);
-            maxBytesBeforePause = 0;
-          }
-          if (read != buf.length) {
-            writeNothingAndFlush();
-            // we close because DeflaterOutputStream requires a close call, but  the request
-            // outputstream is protected
-            fos.close();
-            break;
-          }
-          offset += read;
-          in.seek(offset);
-        }
-      } catch (IOException e) {
-        log.warn("Exception while writing response for params: {}", params, e);
-      } finally {
-        if (in != null) {
-          in.close();
-        }
-        extendReserveAndReleaseCommitPoint();
-      }
-    }
-
-    /** Used to write a marker for EOF */
-    protected void writeNothingAndFlush() throws IOException {
-      fos.writeInt(0);
-      fos.flush();
-    }
-  }
-
-  /** This is used to write files in the conf directory. */
-  private abstract class LocalFsFileStream extends DirectoryFileStream {
-
-    private Path file;
-
-    public LocalFsFileStream(SolrParams solrParams) {
-      super(solrParams);
-      this.file = this.initFile();
-    }
-
-    protected abstract Path initFile();
-
-    @Override
-    public void write(OutputStream out) throws IOException {
-      createOutputStream(out);
-      try {
-        initWrite();
-
-        if (Files.isReadable(file)) {
-          try (SeekableByteChannel channel = Files.newByteChannel(file)) {
-            // if offset is mentioned move the pointer to that point
-            if (offset != -1) channel.position(offset);
-            ByteBuffer bb = ByteBuffer.wrap(buf);
-
-            while (true) {
-              bb.clear();
-              long bytesRead = channel.read(bb);
-              if (bytesRead <= 0) {
-                writeNothingAndFlush();
-                // we close because DeflaterOutputStream requires a close call, but the request
-                // outputstream is protected
-                fos.close();
-                break;
-              }
-              fos.writeInt((int) bytesRead);
-              if (useChecksum) {
-                checksum.reset();
-                checksum.update(buf, 0, (int) bytesRead);
-                fos.writeLong(checksum.getValue());
-              }
-              fos.write(buf, 0, (int) bytesRead);
-              fos.flush();
-            }
-          }
-        } else {
-          writeNothingAndFlush();
-        }
-      } catch (IOException e) {
-        log.warn("Exception while writing response for params: {}", params, e);
-      } finally {
-        extendReserveAndReleaseCommitPoint();
-      }
-    }
-  }
-
-  private class LocalFsTlogFileStream extends LocalFsFileStream {
-
-    public LocalFsTlogFileStream(SolrParams solrParams) {
-      super(solrParams);
-    }
-
-    @Override
-    protected Path initFile() {
-      // if it is a tlog file read from tlog directory
-      return Path.of(core.getUpdateHandler().getUpdateLog().getLogDir(), tlogFileName);
-    }
-  }
-
-  private class LocalFsConfFileStream extends LocalFsFileStream {
-
-    public LocalFsConfFileStream(SolrParams solrParams) {
-      super(solrParams);
-    }
-
-    @Override
-    protected Path initFile() {
-      // if it is a conf file read from config directory
-      return core.getResourceLoader().getConfigPath().resolve(cfileName);
-    }
-  }
-
-  private static Long readIntervalMs(String interval) {
+  private Long readIntervalMs(String interval) {
     return TimeUnit.MILLISECONDS.convert(readIntervalNs(interval), TimeUnit.NANOSECONDS);
   }
 
-  private static Long readIntervalNs(String interval) {
+  public static Long readIntervalNs(String interval) {
     if (interval == null) return null;
     int result = 0;
     Matcher m = INTERVAL_PATTERN.matcher(interval.trim());
@@ -1876,32 +1554,18 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   private static final String FAILED = "failed";
 
-  private static final String EXCEPTION = "exception";
+  public static final String EXCEPTION = "exception";
 
   public static final String LEADER_URL = "leaderUrl";
 
-  @Deprecated
-  /**
-   * @deprecated: Only used for backwards compatibility. Use {@link #LEADER_URL}
-   */
-  public static final String LEGACY_LEADER_URL = "masterUrl";
-
   public static final String FETCH_FROM_LEADER = "fetchFromLeader";
 
-  // in case of TLOG replica, if leaderVersion = zero, don't do commit
-  // otherwise updates from current tlog won't copied over properly to the new tlog, leading to data
-  // loss
+  // In case of TLOG replica, if leaderVersion = zero, don't do commit
+  // otherwise updates from current tlog won't be copied over properly to the new tlog,
+  // leading to data loss.
+  // Don't commit on leader version zero for PULL replicas as PULL should only get its index
+  // state from leader.
   public static final String SKIP_COMMIT_ON_LEADER_VERSION_ZERO = "skipCommitOnLeaderVersionZero";
-
-  @Deprecated
-  /**
-   * @deprecated: Only used for backwards compatibility. Use {@link
-   *     #SKIP_COMMIT_ON_LEADER_VERSION_ZERO}
-   */
-  public static final String LEGACY_SKIP_COMMIT_ON_LEADER_VERSION_ZERO =
-      "skipCommitOnMasterVersionZero";
-
-  public static final String STATUS = "status";
 
   public static final String MESSAGE = "message";
 
@@ -1937,46 +1601,15 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
 
   public static final String CMD_DELETE_BACKUP = "deletebackup";
 
-  public static final String GENERATION = "generation";
-
-  public static final String OFFSET = "offset";
-
-  public static final String LEN = "len";
-
-  public static final String FILE = "file";
-
   public static final String SIZE = "size";
 
-  public static final String MAX_WRITE_PER_SECOND = "maxWriteMBPerSec";
-
-  public static final String CONF_FILE_SHORT = "cf";
-
-  public static final String TLOG_FILE = "tlogFile";
-
-  public static final String CHECKSUM = "checksum";
-
   public static final String ALIAS = "alias";
-
-  public static final String CONF_CHECKSUM = "confchecksum";
 
   public static final String CONF_FILES = "confFiles";
 
   public static final String REPLICATE_AFTER = "replicateAfter";
 
-  public static final String FILE_STREAM = "filestream";
-
-  public static final String POLL_INTERVAL = "pollInterval";
-
-  public static final String INTERVAL_ERR_MSG =
-      "The " + POLL_INTERVAL + " must be in this format 'HH:mm:ss'";
-
-  private static final Pattern INTERVAL_PATTERN = Pattern.compile("(\\d*?):(\\d*?):(\\d*)");
-
-  public static final int PACKET_SZ = 1024 * 1024; // 1MB
-
   public static final String RESERVE = "commitReserveDuration";
-
-  public static final String COMPRESSION = "compression";
 
   public static final String EXTERNAL = "external";
 
@@ -1995,10 +1628,29 @@ public class ReplicationHandler extends RequestHandlerBase implements SolrCoreAw
   /**
    * Boolean param for tests that can be specified when using {@link #CMD_FETCH_INDEX} to force the
    * current request to block until the fetch is complete. <b>NOTE:</b> This param is not advised
-   * for non-test code, since the duration of the fetch for non-trivial indexes will likeley cause
+   * for non-test code, since the duration of the fetch for non-trivial indexes will likely cause
    * the request to time out.
    *
    * @lucene.internal
    */
   public static final String WAIT = "wait";
+
+  public static class ReplicationHandlerConfig implements APIConfigProvider.APIConfig {
+
+    private int numberBackupsToKeep = 0; // zero: do not delete old backups
+
+    public int getNumberBackupsToKeep() {
+      return numberBackupsToKeep;
+    }
+  }
+
+  @Override
+  public ReplicationHandlerConfig provide() {
+    return replicationHandlerConfig;
+  }
+
+  @Override
+  public Class<ReplicationHandlerConfig> getConfigClass() {
+    return ReplicationHandlerConfig.class;
+  }
 }
