@@ -18,23 +18,22 @@
 package org.apache.solr.packagemanager;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.core.type.TypeReference;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
-import org.apache.solr.client.solrj.SolrRequest;
-import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.impl.Http2SolrClient;
-import org.apache.solr.client.solrj.impl.JsonMapResponseParser;
-import org.apache.solr.client.solrj.request.GenericSolrRequest;
+import org.apache.commons.io.file.PathUtils;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
-import org.apache.solr.common.util.CollectionUtil;
-import org.apache.solr.common.util.NamedList;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -82,11 +81,8 @@ public class DefaultPackageRepository extends PackageRepository {
   @Override
   public Path download(String artifactName) throws SolrException, IOException {
     Path tmpDirectory = Files.createTempDirectory("solr-packages");
-    tmpDirectory.toFile().deleteOnExit();
-    URL url =
-        new URL(
-            new URL(repositoryURL.endsWith("/") ? repositoryURL : repositoryURL + "/"),
-            artifactName);
+    PathUtils.deleteOnExit(tmpDirectory);
+    URL url = getRepoUri().resolve(artifactName).toURL();
     String fileName = FilenameUtils.getName(url.getPath());
     Path destination = tmpDirectory.resolve(fileName);
 
@@ -104,28 +100,24 @@ public class DefaultPackageRepository extends PackageRepository {
     return destination;
   }
 
+  private URI getRepoUri() {
+    return URI.create(repositoryURL.endsWith("/") ? repositoryURL : repositoryURL + "/");
+  }
+
   private void initPackages() {
-    // We need http 1.1 protocol here because we are talking to the repository server and not to
-    // solr actually.
-    // We use an Http2SolrClient so that we do not need a raw jetty http client for this GET.
-    try (Http2SolrClient client =
-        new Http2SolrClient.Builder(repositoryURL).useHttp1_1(true).build()) {
-      GenericSolrRequest request =
-          new GenericSolrRequest(SolrRequest.METHOD.GET, "/repository.json");
-      request.setResponseParser(new JsonMapResponseParser());
-      NamedList<Object> resp = client.request(request);
-      SolrPackage[] items =
-          PackageUtils.getMapper().readValue("[" + resp.jsonStr() + "]", SolrPackage[].class);
-      packages = CollectionUtil.newHashMap(items.length);
-      for (SolrPackage pkg : items) {
-        pkg.setRepository(name);
-        packages.put(pkg.name, pkg);
-      }
-    } catch (SolrServerException | IOException ex) {
+    try {
+      final var url = getRepoUri().resolve("repository.json").toURL();
+      packages =
+          PackageUtils.getMapper()
+              .readValue(url, new TypeReference<List<SolrPackage>>() {})
+              .stream()
+              .peek(pkg -> pkg.setRepository(name))
+              .collect(Collectors.toMap(pkg -> pkg.name, Function.identity()));
+    } catch (IOException ex) {
       throw new SolrException(ErrorCode.INVALID_STATE, ex);
     }
     if (log.isDebugEnabled()) {
-      log.debug("Found {} packages in repository '{}'", packages.size(), name);
+      log.debug("Found {} packages in repository '{}'", this.packages.size(), name);
     }
   }
 }
