@@ -20,8 +20,9 @@ package org.apache.solr.cloud;
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakLingering;
 import com.carrotsearch.randomizedtesting.rules.SystemPropertiesRestoreRule;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Properties;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.lucene.tests.util.LuceneTestCase;
@@ -57,9 +58,9 @@ public class MiniSolrCloudClusterTest extends SolrTestCaseJ4 {
           new MiniSolrCloudCluster(3, createTempDir(), JettyConfig.builder().build()) {
             @Override
             public JettySolrRunner startJettySolrRunner(
-                String name, String context, JettyConfig config) throws Exception {
+                String name, JettyConfig config, String solrXml) throws Exception {
               if (jettyIndex.incrementAndGet() != 2)
-                return super.startJettySolrRunner(name, context, config);
+                return super.startJettySolrRunner(name, config, solrXml);
               throw new IOException("Fake exception on startup!");
             }
           };
@@ -117,8 +118,8 @@ public class MiniSolrCloudClusterTest extends SolrTestCaseJ4 {
     System.setProperty(SOLR_HOME_PROP, fakeSolrHome);
 
     // mock FS from createTempDir don't play nice using 'startsWith' when the solr stack
-    // reconsistutes the path from string so we have to go the string route here as well...
-    final Path workDir = Paths.get(createTempDir().toAbsolutePath().toString());
+    // reconstitutes the path from string so we have to go the string route here as well...
+    final Path workDir = Path.of(createTempDir().toAbsolutePath().toString());
 
     final MiniSolrCloudCluster cluster =
         new MiniSolrCloudCluster(1, workDir, JettyConfig.builder().build());
@@ -128,15 +129,10 @@ public class MiniSolrCloudClusterTest extends SolrTestCaseJ4 {
           jetty.getCoreContainer().getSolrHome() + " vs " + workDir,
           // mock dirs from createTempDir() don't play nice with startsWith, so we have to use the
           // string value
-          Paths.get(jetty.getCoreContainer().getSolrHome()).startsWith(workDir));
+          jetty.getCoreContainer().getSolrHome().startsWith(workDir));
       assertEquals(
           jetty.getCoreContainer().getSolrHome(),
-          jetty
-              .getCoreContainer()
-              .getResourceLoader()
-              .getInstancePath()
-              .toAbsolutePath()
-              .toString());
+          jetty.getCoreContainer().getResourceLoader().getInstancePath().toAbsolutePath());
 
       assertTrue(
           CollectionAdminRequest.createCollection("test", 1, 1)
@@ -200,14 +196,18 @@ public class MiniSolrCloudClusterTest extends SolrTestCaseJ4 {
           new MiniSolrCloudCluster(1, createTempDir(), JettyConfig.builder().build()) {
             @Override
             public JettySolrRunner startJettySolrRunner(
-                String name, String hostContext, JettyConfig config) throws Exception {
+                String name, JettyConfig config, String solrXml) throws Exception {
               System.setProperty("zkHost", getZkServer().getZkAddress());
 
               final Properties nodeProps = new Properties();
               nodeProps.setProperty("test-from-sysprop", "yup");
 
               Path runnerPath = createTempDir(name);
-              JettyConfig newConfig = JettyConfig.builder(config).setContext("/blarfh").build();
+              if (solrXml == null) {
+                solrXml = DEFAULT_CLOUD_SOLR_XML;
+              }
+              Files.write(runnerPath.resolve("solr.xml"), solrXml.getBytes(StandardCharsets.UTF_8));
+              JettyConfig newConfig = JettyConfig.builder(config).build();
               JettySolrRunner jetty =
                   new JettySolrRunner(runnerPath.toString(), nodeProps, newConfig);
               return super.startJettySolrRunner(jetty);
